deploy/kustomize/overlays/dev/image-pull-secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unused
spec:
  template:
    spec:
      imagePullSecrets:
        - name: roomies-ghcr
      nodeSelector:
        kubernetes.io/hostname: app-node
