deploy/kustomize/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roomies
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: roomies-dev.jobucaldas.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: roomies-frontend
                port:
                  number: 80
